Fixed bug where lack of border in lights made things jump around.

--- a/css/lights.css
+++ b/css/lights.css
@@ -22,6 +22,7 @@
   display: block;
   font-size: 2em;
   background-color: var(--clr-light-40);
+  border: 1px solid var(--clr-light-40);
   width: 1.5em;
   height: 1.5em;
   text-decoration: none;
